# ableton-music-development

./: claude.md  devices.json  first_song.py  pyproject.toml
abletonosc_client/: __init__.py
abletonosc_client/tests/: conftest.py  test_clip_slot.py
osc_client/: __init__.py  application.py  clip.py  clip_slot.py  device.py  scene.py  song.py  track.py  view.py
osc_client/tests/: __init__.py  conftest.py  test_client.py  test_clip.py  test_clip_slot.py  test_device.py  test_scene.py  test_song.py  test_track.py  test_view.py
scripts/: lofi_song.py
