[project]
name = "ableton-osc-client"
version = "0.1.0"
description = "Python OSC client wrapper for AbletonOSC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-osc>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["osc_client/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
